Fix: layout issues resolved with calendar

--- a/public/assets/stylesheets/style.css
+++ b/public/assets/stylesheets/style.css
@@ -13,9 +13,21 @@ form.signup,
 form.login {
   margin-top: 50px;
 }
+#calendar-cont{
+  border-bottom: 2px solid rgb(54, 54, 54);;
+}
+
+.row{
+  overflow: hidden; 
+}
+
+[class*="col-"]{
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
+}
 
 .day {
-  height: 200px;
+  min-height: 200px;
   border-top: 2px solid rgb(54, 54, 54);
   border-bottom: 2px solid rgb(54, 54, 54);
   border-left: 2px solid rgb(54, 54, 54);
